--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
+    "scroll-carousel": "^1.2.7",
+    "scroll-carousel-react": "^1.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -44,6 +46,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
+    "postcss-import": "^15.1.0",
     "tailwindcss": "^3.2.7"
   }
 }
